--- a/components/global-audio/styles.module.css
+++ b/components/global-audio/styles.module.css
@@ -1,10 +1,12 @@
 .parent {
   position: fixed;
-  top: 1rem;
-  left: 1rem;
+  top: var(--page-margin);
+  left: var(--page-margin);
   z-index: 100;
-  width: calc(100% - 140px);
-  height: 3rem;
+  width: calc(
+    100% - 2 * var(--page-margin) - var(--navigation-height) - 10px - 3rem
+  );
+  height: var(--navigation-height);
   max-width: 800px;
   background: black;
   border-radius: var(--border-radius-content);
