--- a/components/list/projectList.module.css
+++ b/components/list/projectList.module.css
@@ -9,16 +9,6 @@
   padding-bottom: 2rem;
 }
 
-.navigationButtons {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  position: sticky;
-  top: 0.5rem;
-  width: 100%;
-  padding: 0 3rem 1.25rem 0;
-}
-
 .projectContainer {
   position: relative;
   display: flex;
